--- a/css/style.css
+++ b/css/style.css
@@ -12,93 +12,154 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
+  padding-left: 0 !important;
+}
+
+body {
+  background-color: #1E1E1E;
+}
+body main h1 {
+  color: white;
+  text-align: center;
+}
 
 header {
+  background-color: #2F2D2D;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #2F2D2D;
-  width: 100%; }
-  header a img {
-    width: 7.5rem;
-    height: 3.125rem; }
-
-.navBar {
-  display: flex;
-  gap: 15px;
-  list-style: none;
-  height: 3.125rem;
-  padding: 15px;
-  width: 100%; }
-  .navBar li a {
-    text-decoration: none;
-    list-style-type: none;
-    color: white;
-    font-size: 15px; }
-
-main h1 {
-  color: white;
+  position: static;
+  top: 0;
+}
+header a img {
+  width: 12.5rem;
+  height: 5.3125rem;
+}
+header nav ul {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  font-size: 1.875rem;
-  justify-content: center;
+  justify-content: flex-end;
+  padding: 1.875rem;
+  gap: 3.125rem;
   list-style-type: none;
-  text-decoration: none; }
-
-main div {
-  display: flex;
-  flex-direction: row;
-  justify-content: center; }
-  main div img {
-    width: 33%;
-    height: 31.25rem; }
-
-main p {
+  text-align: center;
+}
+header nav ul li a {
   color: white;
   font-size: 1.25rem;
-  text-align: center; }
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+}
 
-main h2 {
-  color: white; }
-
-.body-index {
-  width: 100%;
-  height: 100vh;
-  background-color: #1E1E1E; }
-
-.col {
-  margin: 0 !important; }
-  .col img {
-    width: 18.125rem; }
+main .card-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  padding: 1.25rem;
+}
+main .card {
+  width: 31.25rem;
+  background-color: #2F2D2D;
+  margin: 1.25rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+main .card-content {
+  padding: 1rem;
+}
+main .card-content h3 {
+  font-size: 1.5rem;
+  color: white;
+  text-align: center;
+}
+main .card-content p {
+  color: white;
+  font-size: 1.125rem;
+  text-align: center;
+}
+main .card-content .button {
+  display: inline-block;
+  padding: 0.5rem 1rem;
+  background-color: white;
+  text-decoration: none;
+  border-radius: 20px;
+}
+main .card-content a {
+  color: #1E1E1E;
+}
+main section .div-buzo-inicio {
+  display: flex;
+  justify-content: center;
+}
+main section p {
+  color: white;
+  padding: 20px;
+}
+main section h2 {
+  color: white;
+  text-align: center;
+}
+main .card-remeras {
+  background-color: #2F2D2D;
+  margin: 0.625rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+main .card-remeras img {
+  height: 31.25rem;
+}
+main .card-buzos {
+  background-color: #2F2D2D;
+  margin: 0.625rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+main .card-buzos img {
+  height: 31.25rem;
+}
+main .card-marcas {
+  background-color: #2F2D2D;
+  margin: 0.625rem;
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+main .card-marcas img {
+  width: 21.875rem;
+  height: 31.25rem;
+}
+main .contacto {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+main .contacto div p {
+  text-align: center;
+  color: white;
+}
+main .contacto div ul li a img {
+  width: 6.25rem;
+  height: 6.25rem;
+  margin: 0;
+}
 
 footer {
-  background-color: #2F2D2D; }
-  footer div p {
-    display: flex;
-    justify-content: flex-end;
-    color: white;
-    font-size: 1.0625rem; }
-  footer div img {
-    display: flex;
-    flex-direction: column;
-    width: 2.5rem;
-    height: 2.5rem; }
+  background-color: #2F2D2D;
+}
+footer div {
+  display: flex;
+  justify-content: space-evenly;
+}
+footer div img {
+  width: 3.125rem;
+}
+footer div p {
+  color: white;
+}
 
-@media (max-width: 768px) {
-  main div {
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: center; }
-    main div img {
-      width: 53%; } }
-
-@media (max-width: 320px) {
-  header {
-    display: flex;
-    width: 100vh; }
-    header nav {
-      position: relative; } }
+/*# sourceMappingURL=style.css.map */
