--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -2,4 +2,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
+    padding-left: 0 !important;
+}
+body{
+    background-color: map-get($colores, colorPrincipal);
+    main{
+        h1{
+            color: map-get($colores, colorPrecio);
+            text-align: center;
+        }
+    }
 }
