--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,18 +1,13 @@
 footer{
     background-color: map-get($colores, colorSecundario);
     div{
-        p{
-            display: flex;
-            justify-content: flex-end;
-            color:white;
-            font-size: 1.0625rem;
-        }
+        display: flex;
+        justify-content: space-evenly;
         img{
-            display: flex;
-            flex-direction: column;
-            width: 2.5rem;
-            height: 2.5rem;
+            width: 3.125rem;
         }
-    }   
-
+        p{
+            color: map-get($colores, colorPrecio);
+        }
+    }
 }
