--- a/sass/layout/_main.scss
+++ b/sass/layout/_main.scss
@@ -1,44 +1,114 @@
 main{
-    h1{
-        color: rgb(255, 255, 255);
+
+    .card-container{
         display: flex;
-        flex-direction: row;
-        width: 100%;
-        font-size: 1.875rem;
         justify-content: center;
-        list-style-type: none;
-        text-decoration: none;
+        flex-wrap: wrap;
+        padding: 1.25rem;
     }
-    div{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        img{
-            width: 33%;
-            height: 31.25rem;
-        }
+    .card{
+        width: 31.25rem;
+        background-color: map-get($colores, colorSecundario);
+        margin: 1.25rem;
+        border-radius: .5rem;
+        overflow: hidden;
+        
+
     }
-    p{
-        color: white;
-        font-size: 1.25rem;
+
+
+    .card-content{
+        padding: 1rem;
+
+    }
+    .card-content h3{
+        font-size: 1.5rem;
+        color: map-get($colores, colorPrecio);
         text-align: center;
     }
-    h2{
+
+    .card-content p{
         color: map-get($colores, colorPrecio);
+        font-size: 1.125rem;
+        text-align: center;
     }
-
-}
-.body-index{
-    width: 100%;
-    height: 100vh;
-    background-color: map-get($colores , colorPrincipal);
-}
-
-
-.col {
-    margin: 0 !important;
-    img{
-        width: 18.125rem;
+    .card-content .button{
+        display: inline-block;
+        padding: .5rem 1rem;
+        background-color: white;
+        text-decoration: none;
+        border-radius: 20px;
+    }
+    .card-content a{
+        color: map-get($colores, colorPrincipal);
+        
+    }
+    section{
+        .div-buzo-inicio{
+            display: flex;
+            justify-content: center;
+        }
+        p{
+            color: map-get($colores, colorPrecio);
+            padding: 20px;
+        }
+        h2{
+            color: map-get($colores, colorPrecio);
+            text-align: center;
+        }
+    }
+    .card-remeras{
+        background-color: map-get($colores, colorSecundario);
+        margin: .625rem;
+        border-radius: .5rem;
+        overflow: hidden;
+    }
+    .card-remeras img{
+        height: 31.25rem;
+    }
+    .card-buzos{
+        background-color: map-get($colores, colorSecundario);
+        margin: .625rem;
+        border-radius: .5rem;
+        overflow: hidden;
+    }
+    .card-buzos img{
+        height: 31.25rem;
+    }
+    .card-marcas{
+        background-color: map-get($colores, colorSecundario);
+        margin: .625rem;
+        border-radius: .5rem;
+        overflow: hidden;
+    }
+    .card-marcas img{
+        width: 21.875rem;
+        height: 31.25rem;
+    }
+    .contacto{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .contacto{
+    div{
+        p{
+            text-align: center;
+            color: map-get($colores, colorPrecio);
+        }
+        ul{
+            li{
+                a{
+                    img{
+                        width: 6.25rem;
+                        height: 6.25rem;
+                        margin: 0;
+                    }
+                }
+            }
+        }
     }
 }
 
+}
