--- a/css/style.css
+++ b/css/style.css
@@ -15,16 +15,13 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  padding-left: 0 !important;
-}
+  padding-left: 0 !important; }
 
 body {
-  background-color: #1E1E1E;
-}
-body main h1 {
-  color: white;
-  text-align: center;
-}
+  background-color: #1E1E1E; }
+  body main h1 {
+    color: white;
+    text-align: center; }
 
 header {
   background-color: #2F2D2D;
@@ -33,133 +30,177 @@ header {
   justify-content: space-between;
   align-items: center;
   position: static;
-  top: 0;
-}
-header a img {
-  width: 12.5rem;
-  height: 5.3125rem;
-}
-header nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  padding: 1.875rem;
-  gap: 3.125rem;
-  list-style-type: none;
-  text-align: center;
-}
-header nav ul li a {
-  color: white;
-  font-size: 1.25rem;
-  text-decoration: none;
-  display: inline-block;
-  position: relative;
-}
+  top: 0; }
+  header a img {
+    width: 12.5rem;
+    height: 5.3125rem; }
+  header label {
+    cursor: pointer;
+    display: none; }
+  header nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    padding: 1.875rem;
+    gap: 3.125rem;
+    list-style-type: none;
+    text-align: center; }
+    header nav ul li a {
+      color: white;
+      font-size: 1.25rem;
+      text-decoration: none;
+      display: inline-block;
+      position: relative; }
+  header .menu-icono {
+    width: 1.875rem; }
+  header #menu {
+    display: none; }
 
 main .card-container {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 1.25rem;
-}
+  padding: 1.25rem; }
+
 main .card {
   width: 31.25rem;
   background-color: #2F2D2D;
   margin: 1.25rem;
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
+  border-radius: .5rem;
+  overflow: hidden; }
+
 main .card-content {
-  padding: 1rem;
-}
+  padding: 1rem; }
+
 main .card-content h3 {
   font-size: 1.5rem;
   color: white;
-  text-align: center;
-}
+  text-align: center; }
+
 main .card-content p {
   color: white;
   font-size: 1.125rem;
-  text-align: center;
-}
+  text-align: center; }
+
 main .card-content .button {
   display: inline-block;
-  padding: 0.5rem 1rem;
+  padding: .5rem 1rem;
   background-color: white;
   text-decoration: none;
-  border-radius: 20px;
-}
+  border-radius: 20px; }
+
 main .card-content a {
-  color: #1E1E1E;
-}
+  color: #1E1E1E; }
+
 main section .div-buzo-inicio {
   display: flex;
-  justify-content: center;
-}
+  justify-content: center; }
+
 main section p {
   color: white;
-  padding: 20px;
-}
+  padding: 20px; }
+
 main section h2 {
   color: white;
-  text-align: center;
-}
+  text-align: center; }
+
 main .card-remeras {
   background-color: #2F2D2D;
-  margin: 0.625rem;
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
+  margin: .625rem;
+  border-radius: .5rem;
+  overflow: hidden; }
+
 main .card-remeras img {
-  height: 31.25rem;
-}
+  height: 31.25rem; }
+
 main .card-buzos {
   background-color: #2F2D2D;
-  margin: 0.625rem;
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
+  margin: .625rem;
+  border-radius: .5rem;
+  overflow: hidden; }
+
 main .card-buzos img {
-  height: 31.25rem;
-}
+  height: 31.25rem; }
+
 main .card-marcas {
   background-color: #2F2D2D;
-  margin: 0.625rem;
-  border-radius: 0.5rem;
-  overflow: hidden;
-}
+  margin: .625rem;
+  border-radius: .5rem;
+  overflow: hidden; }
+
 main .card-marcas img {
   width: 21.875rem;
-  height: 31.25rem;
-}
+  height: 31.25rem; }
+
 main .contacto {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
-}
+  align-items: center; }
+
 main .contacto div p {
   text-align: center;
-  color: white;
-}
+  color: white; }
+
 main .contacto div ul li a img {
   width: 6.25rem;
   height: 6.25rem;
-  margin: 0;
-}
+  margin: 0; }
 
 footer {
-  background-color: #2F2D2D;
-}
-footer div {
-  display: flex;
-  justify-content: space-evenly;
-}
-footer div img {
-  width: 3.125rem;
-}
-footer div p {
-  color: white;
-}
+  background-color: #2F2D2D; }
+  footer div {
+    display: flex;
+    justify-content: space-evenly; }
+    footer div img {
+      width: 3.125rem; }
+    footer div p {
+      color: white; }
 
-/*# sourceMappingURL=style.css.map */
+@media (max-width: 768px) {
+  header a img {
+    width: 6.875rem; }
+  section p {
+    font-size: 1.25rem; }
+  main .card-remeras {
+    width: 18.75rem; }
+  main .card-buzos {
+    width: 18.75rem; } }
+
+@media (max-width: 320px) {
+  header label {
+    display: initial; }
+  header .navbar {
+    position: absolute;
+    top: 5.625rem;
+    left: 0;
+    background-color: #2F2D2D;
+    right: 0;
+    display: none; }
+  header .navbar ul li a {
+    font-size: .625rem;
+    padding: 0; }
+  header .navbar ul {
+    display: flex;
+    flex-direction: column; }
+  #menu:checked ~ .navbar {
+    display: initial; }
+  main section div img {
+    width: 12.5rem; }
+  main section p {
+    background-color: #2F2D2D;
+    font-size: 1rem;
+    text-align: center;
+    margin: 30px; }
+  main .card img {
+    width: 100%; }
+  main .card-remeras img {
+    width: 100%; }
+  main .card-buzos img {
+    width: 100%; }
+  main .contacto {
+    display: flex;
+    flex-direction: column; }
+  main .googlemaps {
+    width: 15.625rem;
+    margin-bottom: 10px; } }
