--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,4 +24,8 @@
 
 @import "./layout/mediaQuerry/media768";
 
+@import "./layout/mediaQuerry/media425";
+
+@import "./layout/mediaQuerry/media375";
+
 @import "./layout/mediaQuerry/media320";
