--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,86 @@ footer {
   main .card-buzos {
     width: 18.75rem; } }
 
+@media (max-width: 425px) {
+  header a img {
+    width: 9.375rem; }
+  header label {
+    display: initial; }
+  header .navbar {
+    position: absolute;
+    top: 5.625rem;
+    left: 0;
+    background-color: #2F2D2D;
+    right: 0;
+    display: none; }
+  header .navbar ul li a {
+    font-size: .625rem;
+    padding: 0; }
+  header .navbar ul {
+    display: flex;
+    flex-direction: column; }
+  #menu:checked ~ .navbar {
+    display: initial; }
+  main section div img {
+    width: 18.75rem; }
+  main section p {
+    font-size: 1rem;
+    margin: 10px; }
+  main section .card img {
+    width: 100%; }
+  main .card-remeras img {
+    width: 100%; }
+  main .card-buzos img {
+    width: 100%; }
+  main .contacto {
+    display: flex;
+    flex-direction: column; }
+  main .googlemaps {
+    width: 18.75rem;
+    margin-bottom: 10px; }
+  footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center; } }
+
+@media (max-width: 375px) {
+  header a img {
+    width: 9.375rem; }
+  header label {
+    display: initial; }
+  header .navbar {
+    position: absolute;
+    top: 5.625rem;
+    left: 0;
+    background-color: #2F2D2D;
+    right: 0;
+    display: none; }
+  header .navbar ul li a {
+    font-size: .625rem;
+    padding: 0; }
+  header .navbar ul {
+    display: flex;
+    flex-direction: column; }
+  #menu:checked ~ .navbar {
+    display: initial; }
+  main section div img {
+    width: 15.625rem; }
+  main section p {
+    font-size: 14px;
+    margin: 5px; }
+  main section .card img {
+    width: 100%; }
+  main .card-remeras img {
+    width: 100%; }
+  main .card-buzos img {
+    width: 100%; }
+  main .contacto {
+    display: flex;
+    flex-direction: column; }
+  main .googlemaps {
+    width: 15.625rem;
+    margin-bottom: 10px; } }
+
 @media (max-width: 320px) {
   header label {
     display: initial; }
@@ -203,4 +283,8 @@ footer {
     flex-direction: column; }
   main .googlemaps {
     width: 15.625rem;
-    margin-bottom: 10px; } }
+    margin-bottom: 10px; }
+  footer div {
+    display: flex;
+    flex-direction: column;
+    align-items: center; } }
