--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,12 @@ header{
     position: static;
     top: 0;
 
+    .neon-texto:hover{
+        color: #4FFF40;
+        text-shadow: 0 0 10px #4FFF40,
+                    0 0 20px #4FFF40,
+                    0 0 30px #4FFF40;
+    }
     a{
         img{
             width: 12.5rem;
