--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -42,6 +42,7 @@ header{
                     text-decoration: none;
                     display: inline-block;
                     position: relative;
+                    z-index: 1;
                     }
                 }
             }
