--- a/sass/layout/mediaQuerry/_media375.scss
+++ b/sass/layout/mediaQuerry/_media375.scss
@@ -19,7 +19,7 @@
             background-color: map-get($colores, colorSecundario);
             right: 0;
             display: none;
-    
+            z-index: 1;
             }
             .navbar ul li a{
                 font-size: .75rem;
